--- a/QuizzyVoote/app/build.gradle
+++ b/QuizzyVoote/app/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
 
+    implementation "com.google.android.material:material:1.1.0-alpha06"
+
+
 }
